--- a/app/views/profile/index.phtml
+++ b/app/views/profile/index.phtml
@@ -1,6 +1,6 @@
 <?php $this->partial('partials/memberHeader'); ?>
 <div>
-    <?php echo $this->flashSession->output(); ?>
+    <?php echo $this->flash->output(); ?>
     <div id="change_password">
         <h3>Change Password</h3>
 
