--- a/app/views/index/index.phtml
+++ b/app/views/index/index.phtml
@@ -1,5 +1,6 @@
 <?php $this->partial('partials/publicHeader'); ?>
 <div class="login_form">
+    <?php $this->flash->output(); ?>
     <form name="login" method="POST" action="/session/login/">
         <?php echo $form->render('username') . "\n"; ?>
         <?php echo $form->render('password') . "\n"; ?>
@@ -8,5 +9,4 @@
             <a id="register" href="register/">Register</a>
         </div>
     </form>
-    <p><?php $this->flashSession->output(); ?></p>
 </div>
