--- a/app/views/member/index.phtml
+++ b/app/views/member/index.phtml
@@ -1,6 +1,8 @@
 <?php $this->partial('partials/memberHeader'); ?>
 <div>
-    <?php echo $this->flashSession->output(); ?>
+    <div id="messages">
+        <?php echo $this->flash->output(); ?>
+    </div>
     <div id="lists">
         <h2>My Lists:</h2>
 
