--- a/app/views/edit/index.phtml
+++ b/app/views/edit/index.phtml
@@ -28,6 +28,37 @@
                 $member_url = '/member/list/' . $list->id . '/';
                 $editlist_url = '/editlist/list/' . $list->id . '/';
 
+                if($list->owner_id == $user->id) {
+                    $custom_hidden = '<input type="hidden" name="participation" value="owner">' . "\n";
+                } else {
+                    $custom_hidden = '<input type="hidden" name="participation" value="member">' . "\n";
+                }
+
+                $html .= '<li id="l' . $list->id . '">' . "\n";
+
+                $html .= '<p><a href="' . $member_url . '">' . $list->title . '</a></p>' . "\n";
+                $html .= '<div class="holder">' . "\n";
+                $html .= '<a href="/edit/users/' . $list->id . '/" class="btn btn-warning btn-small"><i class="icon-white icon-user"></i></a>' . "\n";
+                $html .= '<a href="/edit/list/' . $list->id . '/" class="btn btn-warning btn-small"><i class="icon-white icon-edit"></i></a>' . "\n";
+                $html .= Phalcon\Tag::form(array("edit/deleteList", "method" => "post", "name" => "delete_list_{$list->id}")) . "\n";
+                $html .= '<input name="list_to_delete" type="hidden" value="' . $list->id . '">' . "\n";
+                $html .= $custom_hidden . "\n";
+                $html .= '<label class="btn btn-danger btn-small" for="delete_list_' . $list->id . '"><i class="icon-white icon-remove"></i></label>' . "\n";
+                $html .= '<input class="hidden" type="submit" id="delete_list_' . $list->id . '">' . "\n";
+                $html .= Phalcon\Tag::endForm() . "\n";
+
+                /*
+                $html .= '<form action="deleteList" method="post" name="delete_list_z' . $list->id . '">' . "\n";
+                $html .= '<label class="btn btn-danger btn-small" for="delete_list_' . $list->id . '"><i class="icon-white icon-remove"></i></label>' . "\n";
+                $html .= '<input class="hidden" type="submit" name="delete_list_' . $list->id . '">' . "\n";
+                $html .= '</form>' . "\n";
+                */
+
+                $html .= '</div>' . "\n";
+
+                $html .= '</li>' . "\n";
+
+                /*
                 $html .= '<li id="l' . $list->id . '">' . "\n";
                 $html .= '<p><a href="' . $member_url . '">' . $list->title . '</a></p>' . "\n";
                 $html .= '<div class="holder">' . "\n";
@@ -37,6 +68,7 @@
                 $html .= '</div>' . "\n";
 
                 $html .= '</li>' . "\n";
+                */
 
             }
 
