--- a/public/css/edit.css
+++ b/public/css/edit.css
@@ -1,7 +1,5 @@
 div#add_list_form {
     display: flex;
-    flex-direction: row;
-    align-items: center;
     justify-content: center;
 }
 
@@ -9,28 +7,28 @@ div#add_list_form input[type="submit"] {
     margin-left: 15px;
 }
 
-div#lists {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
 div#lists ul {
     list-style: none;
     margin: 0;
-    width: 100%;
 }
 
 div#lists ul li {
     align-items: center;
     display: flex;
-    flex-direction: row;
     justify-content: space-between;
     padding: 4px 8px;
 }
 
+div.holder {
+    display: flex;
+}
+
+div.holder form {
+    margin: 0;
+}
+
 div#lists div.holder > a,
-div#lists div.holder > button {
+div#lists div.holder > form {
     margin-left: 10px;
 }
 
