--- a/public/css/editlist.css
+++ b/public/css/editlist.css
@@ -1,11 +1,21 @@
 div#edit_list {
     display: flex;
     justify-content: center;
+
+    display: -webkit-flex;
+    -webkit-justify-content: center;
 }
 
 div#edit_controls {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
-    margin: 5px auto;
+    align-items: center;
+    justify-content: space-between;
+    width: 80%;
+    margin: 15px auto;
+
+    display: -webkit-flex;
+    -webkit-flex-direction: row;
+    -webkit-align-items: center;
+    -webkit-justify-content: space-between;
 }
