--- a/public/css/member.css
+++ b/public/css/member.css
@@ -1,13 +1,20 @@
 div#lists {
     display: flex;
+    display: -webkit-flex;
     flex-direction: column;
+    -webkit-flex-direction: column;
     align-items: center;
+    -webkit-align-items: center;    
 }
 
 div#items {
     display: flex;
     flex-direction: column;
     align-items: center;
+    display: -webkit-flex;
+    -webkit-flex-direction: column;
+    -webkit-align-items: center;
+    
 }
 
 div#items_container {
@@ -28,14 +35,16 @@ table {
     border-spacing: 0 3px;
     margin: 0 auto 30px;
     min-width: 320px;
+    font-size: 16px;
 }
 
 div#items div#items_container table tr.item_hover {
-    background-color: #ddd;
+    text-decoration: underline;
 }
 
 table tr:hover {
     cursor: pointer;
+    text-decoration: underline;
 }
 
 table tr:nth-child(even) {
