--- a/public/css/users.css
+++ b/public/css/users.css
@@ -3,6 +3,10 @@ div#invite {
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    display: -webkit-flex;
+    -webkit-flex-direction: column;
+    -webkit-align-items: center;
 }
 
 div#invite input[type="submit"] {
@@ -21,6 +25,10 @@ div#members ul li {
     flex-direction: row;
     justify-content: space-between;
     padding: 4px 8px;
+
+    display: -webkit-flex;
+    -webkit-align-items: center;
+    -webkit-justify-content: space-between;
 }
 
 div#members li:nth-child(odd) {
