added javascript setinterval timed update on member items table

--- a/app/views/partials/items.phtml
+++ b/app/views/partials/items.phtml
@@ -5,7 +5,7 @@ $html = '';
 if(count($user_lists) > 0) {
     if(count($items) < 1) {
 
-        $html .= '<p>You haven\'t add any items yet.</p>' . "\n";
+        $html .= '<p>You haven\'t added any items yet.</p>' . "\n";
 
     } else {
 
