--- a/public/css/member.css
+++ b/public/css/member.css
@@ -7,6 +7,8 @@ div#lists {
     -webkit-align-items: center;    
 }
 
+
+
 div#items {
     display: flex;
     flex-direction: column;
@@ -18,6 +20,12 @@ div#items {
 }
 
 div#items_container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    display: -webkit-flex;
+    -webkit-flex-direction: column;
+    -webkit-align-items: center;
     width: 100%;
 }
 
