--- a/public/css/main.css
+++ b/public/css/main.css
@@ -88,7 +88,6 @@ nav ul li {
 
     background-color: white;
     border-bottom: 1px solid #aaa;
-    padding: 2px 4px;
 }
 
 nav ul li:last-child {
@@ -97,6 +96,7 @@ nav ul li:last-child {
 
 nav ul li a {
     display: block;
+    width: 100%;
     padding: 3px 6px;
 }
 
